--- a/package.json
+++ b/package.json
@@ -28,9 +28,17 @@
     "@angular/compiler": "^21.0.0",
     "@angular/core": "^21.0.0",
     "@angular/forms": "^21.0.0",
+    "@angular/localize": "^21.0.5",
     "@angular/material": "^21.0.3",
     "@angular/platform-browser": "^21.0.0",
     "@angular/router": "^21.0.4",
+    "@ant-design/colors": "^7.2.1",
+    "@ant-design/icons-angular": "^21.0.0",
+    "@ng-bootstrap/ng-bootstrap": "^20.0.0",
+    "@popperjs/core": "^2.11.8",
+    "apexcharts": "^5.3.6",
+    "ng-apexcharts": "^2.0.4",
+    "ngx-scrollbar": "^18.0.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.8.1"
   },
