--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,8 @@
 /* To learn more about Typescript configuration file: https://www.typescriptlang.org/docs/handbook/tsconfig-json.html. */
 /* To learn more about Angular compiler options: https://angular.dev/reference/configs/angular-compiler-options. */
 {
-  "compileOnSave": false,"baseUrl": "./",
+  "compileOnSave": false,
+  "baseUrl": "./",
   "compilerOptions": {
     "strict": true,
     "noImplicitOverride": true,
@@ -12,6 +13,7 @@
     "isolatedModules": true,
     "experimentalDecorators": true,
     "importHelpers": true,
+    "moduleResolution": "bundler",
     "target": "ES2022",
     "module": "preserve"
   },
